force-app/main/default/objects/Sample_Transaction__c/fields/Product_Specification_Present__c.field-meta.xml
<CustomField>
    <fullName>Product_Specification_Present__c</fullName>
    <label>Product Specification Present</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>