force-app/main/default/objects/Sample_Transaction__c/fields/Production_Date_of_Sample__c.field-meta.xml
<CustomField>
    <fullName>Production_Date_of_Sample__c</fullName>
    <inlineHelpText>Production date of sample (if relevant).</inlineHelpText>
    <label>Production Date of Sample</label>
    <type>Date</type>
</CustomField>