force-app/main/default/objects/Sample_Transaction__c/fields/Protein_Content_of_Dried_Milk__c.field-meta.xml
<CustomField>
    <fullName>Protein_Content_of_Dried_Milk__c</fullName>
    <inlineHelpText>What is the protein content (%) of the dried milk product?  Maximum value is 100%.</inlineHelpText>
    <label>Protein content (%) of Dried Milk</label>
    <length>6</length>
    <type>Text</type>
</CustomField>