force-app/main/default/objects/Sample_Transaction__c/fields/Protein_content_percent__c.field-meta.xml
<CustomField>
    <fullName>Protein_content_percent__c</fullName>
    <inlineHelpText>Protein content (%) in your application(s)?  Maximum value of 100%.</inlineHelpText>
    <label>Protein Content (%)</label>
    <length>6</length>
    <type>Text</type>
</CustomField>