force-app/main/default/objects/Sample_Transaction__c/fields/Purpose_of_Sample__c.field-meta.xml
<CustomField>
    <fullName>Purpose_of_Sample__c</fullName>
    <label>Sample Details</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>