force-app/main/default/objects/Sample_Transaction__c/fields/Quantity_In__c.field-meta.xml
<CustomField>
    <fullName>Quantity_In__c</fullName>
    <label>Quantity In</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>