force-app/main/default/objects/Sample_Transaction__c/fields/Received_by_customer__c.field-meta.xml
<CustomField>
    <fullName>Received_by_customer__c</fullName>
    <label>Received by customer</label>
    <type>Date</type>
</CustomField>