force-app/main/default/objects/Sample_Transaction__c/fields/Received_kgs_from_factory__c.field-meta.xml
<CustomField>
    <fullName>Received_kgs_from_factory__c</fullName>
    <label>Received KG&apos;s from Factory</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>