force-app/main/default/objects/Sample_Transaction__c/fields/Received_Pieces__c.field-meta.xml
<CustomField>
    <fullName>Received_Pieces__c</fullName>
    <inlineHelpText>Received pieces from factory?</inlineHelpText>
    <label>Received Pieces from Factory?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>