force-app/main/default/objects/Sample_Transaction__c/fields/Request_Processor__c.field-meta.xml
<CustomField>
    <fullName>Request_Processor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Request Processor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sample_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>