force-app/main/default/objects/Sample_Transaction__c/fields/Request_Reference__c.field-meta.xml
<CustomField>
    <fullName>Request_Reference__c</fullName>
    <label>Request Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>