force-app/main/default/objects/Sample_Transaction__c/fields/Requested_Product__c.field-meta.xml
<CustomField>
    <fullName>Requested_Product__c</fullName>
    <label>Requested Product text</label>
    <length>30</length>
    <type>Text</type>
</CustomField>