force-app/main/default/objects/Sample_Transaction__c/fields/RequestedProduct__c.field-meta.xml
<CustomField>
    <fullName>RequestedProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requested Product</label>
    <referenceTo>Item__c</referenceTo>
    <relationshipLabel>Sample Requests</relationshipLabel>
    <relationshipName>Sample_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>