force-app/main/default/objects/Sample_Transaction__c/fields/Sample_Approved__c.field-meta.xml
<CustomField>
    <fullName>Sample_Approved__c</fullName>
    <label>Sample Approved</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Lead dead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>