force-app/main/default/objects/Sample_Transaction__c/fields/Sample_Goes__c.field-meta.xml
<CustomField>
    <fullName>Sample_Goes__c</fullName>
    <label>Sample Goes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>From supplier to Hoogwegt</fullName>
            </value>
            <value>
                <fullName>From supplier to warehouse</fullName>
            </value>
            <value>
                <fullName>From supplier to customer</fullName>
            </value>
            <value>
                <fullName>From Hoogwegt to customer</fullName>
            </value>
            <value>
                <fullName>From warehouse to customer</fullName>
            </value>
            <value>
                <fullName>From warehouse to Hoogwegt to customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>