force-app/main/default/objects/Sample_Transaction__c/fields/Sample_of_reference_product_present__c.field-meta.xml
<CustomField>
    <fullName>Sample_of_reference_product_present__c</fullName>
    <inlineHelpText>Sample of reference product present?</inlineHelpText>
    <label>Sample of Reference Product Present?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>