force-app/main/default/objects/Sample_Transaction__c/fields/Sample_on_Stock_Fresh__c.field-meta.xml
<CustomField>
    <fullName>Sample_on_Stock_Fresh__c</fullName>
    <label>Sample on Stock &amp; Fresh</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No, to be Ordered</fullName>
            </value>
            <value>
                <fullName>3</fullName>
                <isActive>false</isActive>
                <label>3</label>
            </value>
            <value>
                <fullName>4</fullName>
                <isActive>false</isActive>
                <label>4</label>
            </value>
            <value>
                <fullName>5</fullName>
                <isActive>false</isActive>
                <label>5</label>
            </value>
            <value>
                <fullName>6</fullName>
                <isActive>false</isActive>
                <label>6</label>
            </value>
            <value>
                <fullName>7</fullName>
                <isActive>false</isActive>
                <label>7</label>
            </value>
            <value>
                <fullName>8</fullName>
                <isActive>false</isActive>
                <label>8</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>