force-app/main/default/objects/Sample_Transaction__c/fields/Sample_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Sample_Request_Type__c</fullName>
    <label>Sample Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approval Supplier/Product</fullName>
            </value>
            <value>
                <fullName>Approval Product</fullName>
            </value>
            <value>
                <fullName>For Tests/Analyses</fullName>
            </value>
            <value>
                <fullName>Pre-Shipment Sample</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>