force-app/main/default/objects/Sample_Transaction__c/fields/Sample_sourcing_manager__c.field-meta.xml
<CustomField>
    <fullName>Sample_sourcing_manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sample sourcing manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sample_Transactions2</relationshipName>
    <type>Lookup</type>
</CustomField>