force-app/main/default/objects/Sample_Transaction__c/fields/Sample_Type__c.field-meta.xml
<CustomField>
    <fullName>Sample_Type__c</fullName>
    <label>Sample Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>