force-app/main/default/objects/Sample_Transaction__c/fields/Sanitary_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Sanitary_Certificate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sanitary Certificate</label>
    <type>Checkbox</type>
</CustomField>