force-app/main/default/objects/Sample_Transaction__c/fields/Sent_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_Customer__c</fullName>
    <label>Sent to Customer</label>
    <type>Date</type>
</CustomField>