force-app/main/default/objects/Sample_Transaction__c/fields/Ship_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Ship_Deadline__c</fullName>
    <label>Ship Deadline</label>
    <type>Date</type>
</CustomField>