force-app/main/default/objects/Sample_Transaction__c/fields/Shipped_to__c.field-meta.xml
<CustomField>
    <fullName>Shipped_to__c</fullName>
    <label>Shipped To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Hoogwegt F.E.C.</fullName>
            </value>
            <value>
                <fullName>Laboratory</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Warehouse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>