force-app/main/default/objects/Sample_Transaction__c/fields/Spec_of_Reference_Product_Attached__c.field-meta.xml
<CustomField>
    <fullName>Spec_of_Reference_Product_Attached__c</fullName>
    <inlineHelpText>Specification of reference product present?  Answer type should be a link to attachment.</inlineHelpText>
    <label>Spec of Reference Product Attached</label>
    <length>255</length>
    <type>Text</type>
</CustomField>