force-app/main/default/objects/Sample_Transaction__c/fields/Specification_present__c.field-meta.xml
<CustomField>
    <fullName>Specification_present__c</fullName>
    <label>Specification present</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>