force-app/main/default/objects/Sample_Transaction__c/fields/StageSSI__c.field-meta.xml
<CustomField>
    <fullName>StageSSI__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>