force-app/main/default/objects/Sample_Transaction__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Technical Review</fullName>
            </value>
            <value>
                <fullName>Logistics Review</fullName>
            </value>
            <value>
                <fullName>Sample Requested</fullName>
            </value>
            <value>
                <fullName>Sample approved</fullName>
                <label>Sample Approved</label>
            </value>
            <value>
                <fullName>Sample Not Approved</fullName>
            </value>
            <value>
                <fullName>Sample lead dead</fullName>
                <label>Sample Lead Dead</label>
            </value>
            <value>
                <fullName>Approved</fullName>
                <isActive>false</isActive>
                <label>Approved</label>
            </value>
            <value>
                <fullName>In Process</fullName>
                <isActive>false</isActive>
                <label>In Process</label>
            </value>
            <value>
                <fullName>Not Approved</fullName>
                <isActive>false</isActive>
                <label>Not Approved</label>
            </value>
            <value>
                <fullName>Open</fullName>
                <isActive>false</isActive>
                <label>Open</label>
            </value>
            <value>
                <fullName>Sample Sent</fullName>
                <isActive>false</isActive>
                <label>Sample Sent</label>
            </value>
            <value>
                <fullName>Sample rejected</fullName>
                <isActive>false</isActive>
                <label>Sample rejected</label>
            </value>
            <value>
                <fullName>Sent</fullName>
                <isActive>false</isActive>
                <label>Sent</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>