force-app/main/default/objects/Sample_Transaction__c/fields/Stored_at_which_warehouse__c.field-meta.xml
<CustomField>
    <fullName>Stored_at_which_warehouse__c</fullName>
    <inlineHelpText>Please provide name of warehouse in JDE.</inlineHelpText>
    <label>Stored at which warehouse</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>List of Warehouses from JDE - TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>