force-app/main/default/objects/Sample_Transaction__c/fields/StoredAtWhichWarehouse__c.field-meta.xml
<CustomField>
    <fullName>StoredAtWhichWarehouse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stored at which warehouse</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Warehouse</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sample Requests (Stored at which warehouse)</relationshipLabel>
    <relationshipName>Sample_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>