force-app/main/default/objects/Sample_Transaction__c/fields/Sub_Type_picklist__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type_picklist__c</fullName>
    <label>Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>20</fullName>
            </value>
            <value>
                <fullName>25</fullName>
            </value>
            <value>
                <fullName>26</fullName>
            </value>
            <value>
                <fullName>27</fullName>
            </value>
            <value>
                <fullName>28</fullName>
            </value>
            <value>
                <fullName>35</fullName>
            </value>
            <value>
                <fullName>42</fullName>
            </value>
            <value>
                <fullName>50</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>70</fullName>
            </value>
            <value>
                <fullName>75</fullName>
            </value>
            <value>
                <fullName>80</fullName>
            </value>
            <value>
                <fullName>90</fullName>
            </value>
            <value>
                <fullName>100 MESH</fullName>
            </value>
            <value>
                <fullName>10INSTANT</fullName>
            </value>
            <value>
                <fullName>110 MESH</fullName>
            </value>
            <value>
                <fullName>120 MESH</fullName>
            </value>
            <value>
                <fullName>150 MESH</fullName>
            </value>
            <value>
                <fullName>200 MESH</fullName>
            </value>
            <value>
                <fullName>20INSTANT</fullName>
            </value>
            <value>
                <fullName>30 MESH</fullName>
            </value>
            <value>
                <fullName>30/60 MESH</fullName>
            </value>
            <value>
                <fullName>4INSTANT</fullName>
            </value>
            <value>
                <fullName>5INSTANT</fullName>
            </value>
            <value>
                <fullName>60 MESH</fullName>
            </value>
            <value>
                <fullName>80 MESH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>