force-app/main/default/objects/Sample_Transaction__c/fields/Sugar_content_percent__c.field-meta.xml
<CustomField>
    <fullName>Sugar_content_percent__c</fullName>
    <inlineHelpText>Sugar content (%) in your application(s)?  Maximum value is 100%.</inlineHelpText>
    <label>Sugar Content (%)</label>
    <length>6</length>
    <type>Text</type>
</CustomField>