force-app/main/default/objects/Sample_Transaction__c/fields/Technical_Collegue__c.field-meta.xml
<CustomField>
    <fullName>Technical_Collegue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Name of technical colleague who should pick up this request.</inlineHelpText>
    <label>Technical Collegue</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sample_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>