force-app/main/default/objects/Sample_Transaction__c/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <inlineHelpText>Total costs (€) (?) e.g. transport, sample, documents</inlineHelpText>
    <label>Total Cost</label>
    <length>255</length>
    <type>Text</type>
</CustomField>