force-app/main/default/objects/Sample_Transaction__c/fields/Trace_Number__c.field-meta.xml
<CustomField>
    <fullName>Trace_Number__c</fullName>
    <inlineHelpText>You must fill this out when Sample Goes is one of the following... From supplier to Hoogwegt, From supplier to warehouse,  From warehouse to Hoogwegt to customer</inlineHelpText>
    <label>Trace Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>