force-app/main/default/objects/Sample_Transaction__c/fields/Type_of_Transport__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Transport__c</fullName>
    <inlineHelpText>You must fill this out when Sample Goes is one of the following... From supplier to Hoogwegt, From supplier to warehouse,  From warehouse to Hoogwegt to customer</inlineHelpText>
    <label>Type of Transport</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ambient</fullName>
            </value>
            <value>
                <fullName>Chilled</fullName>
            </value>
            <value>
                <fullName>Frozen</fullName>
            </value>
            <value>
                <fullName>Icepacks</fullName>
            </value>
            <value>
                <fullName>Tempex Box</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>