force-app/main/default/objects/Sample_Transaction__c/fields/Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measure__c</fullName>
    <label>Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>LBS</fullName>
            </value>
            <value>
                <fullName>Kgs</fullName>
            </value>
            <value>
                <fullName>Grams</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>