force-app/main/default/objects/Sample_Transaction__c/fields/Warehouse2__c.field-meta.xml
<CustomField>
    <fullName>Warehouse2__c</fullName>
    <label>Warehouse</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>List of Warehouses from JDE - TBD</fullName>
            </value>
            <value>
                <fullName>2</fullName>
                <isActive>false</isActive>
                <label>2</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>