force-app/main/default/objects/Sample_Transaction__c/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    <label>Warehouse</label>
    <length>30</length>
    <type>Text</type>
</CustomField>