force-app/main/default/objects/Sample_Transaction__c/fields/Where_is_the_sample_stored__c.field-meta.xml
<CustomField>
    <fullName>Where_is_the_sample_stored__c</fullName>
    <label>Where is the sample stored</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sample_on_Stock_Fresh__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>At warehouse</fullName>
            </value>
            <value>
                <fullName>At Hoogwegt F.E.C.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>