force-app/main/default/objects/Sample_Transaction__c/recordTypes/Havero_Hoogwegt.recordType-meta.xml
<RecordType>
    <fullName>Havero_Hoogwegt</fullName>
    <active>true</active>
    <label>Pre-Check for Blends Needed</label>
</RecordType>