force-app/main/default/objects/Sample_Transaction__c/recordTypes/Other.recordType-meta.xml
<RecordType>
    <fullName>Other</fullName>
    <active>true</active>
    <label>Pre-Check NOT Needed</label>
</RecordType>