force-app/main/default/objects/Sample_Transaction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Sent_to_Customer__c</columns>
    <columns>Ship_Deadline__c</columns>
    <columns>Request_Processor__c</columns>
    <columns>Trader__c</columns>
    <columns>Company__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>