force-app/main/default/objects/Sample_Transaction__c/listViews/Loes_sample.listView-meta.xml
<ListView>
    <fullName>Loes_sample</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Sent_to_Customer__c</columns>
    <columns>Ship_Deadline__c</columns>
    <columns>Request_Processor__c</columns>
    <columns>Trader__c</columns>
    <columns>Company__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Request_Processor__c</field>
        <operation>equals</operation>
        <value>loes van os</value>
    </filters>
    <label>Loes sample</label>
</ListView>