force-app/main/default/objects/Sample_Transaction__c/listViews/My_Samples.listView-meta.xml
<ListView>
    <fullName>My_Samples</fullName>
    <columns>NAME</columns>
    <columns>Company__c</columns>
    <columns>Contact__c</columns>
    <columns>RequestedProduct__c</columns>
    <columns>Record_Type__c</columns>
    <columns>Status__c</columns>
    <columns>StageSSI__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Samples</label>
</ListView>